--- a/styles.css
+++ b/styles.css
@@ -59,4 +59,98 @@ body {
   button:hover {
     background-color: #0056b3;
   }
+
+.notice_text{
+    margin: 20px 10px;
+    padding: 10px 20px;
+    background-color: #f4ab36;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  
+  #notificationContainer {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+  }
+  
+  .notification {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 300px;
+    padding: 15px;
+    padding-left: 30px;
+    margin-bottom: 10px;
+    background-color: #f4ab36;
+    color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    animation: slideIn 0.5s ease-out;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .notification::before{
+    content: '';
+    width: 5px;
+    height: 70%;
+    position: absolute;
+    left: 10px;
+    top: 8px;
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 5px;
+  }
+
+  .success{
+    background-color: #0dcb75;
+  }
+
+  .error{
+    background-color: #f43636;
+  }
+  
+  .notification .message {
+    font-size: 14px;
+    flex: 1;
+  }
+  
+  .notification .close-btn {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 30px;
+    cursor: pointer;
+  }
+  
+  .notification .progress-bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 5px;
+    background-color: rgba(255, 255, 255, 0.7);
+    animation: progress 5s linear;
+  }
+  
+  @keyframes slideIn {
+    from {
+      transform: translateX(100%);
+    }
+    to {
+      transform: translateX(0);
+    }
+  }
+  
+  @keyframes progress {
+    from {
+      width: 100%;
+    }
+    to {
+      width: 0;
+    }
+  }
   
